codepkg/objects/Project_Site__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Hazards_to_Consider_in_Design__c</fullName>
        <label>Additional Hazards to Consider in Design</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_Structure_Year_Built__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Age of Structure (Year Built)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_mantain_costs_useful_life__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Annual mantain costs &amp; useful life</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Extension</label>
        <referenceTo>Application_Extension__c</referenceTo>
        <relationshipLabel>Project Sites</relationshipLabel>
        <relationshipName>Project_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Project Sites</relationshipLabel>
        <relationshipName>Project_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Base_Flood_Elevation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Base Flood Elevation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basement_Present__c</fullName>
        <label>Basement Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basic_design_for_each_structure__c</fullName>
        <label>Basic design for each structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Build_type_stories_use_and_occupancy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Build type, stories, use, and occupancy</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Building_Use__c</fullName>
        <label>Building Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_code_standard_used_in_design__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Building code standard used in design</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Building_costs_related_to_life_safety__c</fullName>
        <label>Building costs related to life safety?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_industrialor_hazard_material__c</fullName>
        <inlineHelpText>Properties that are contaminated with hazardous materials are not eligible for acquisition. The subrecipient must ensure that a property with past or present commercial or industrial use and any adjacent properties suspected of having hazardous materials at the site are not contaminated when the project application is approved. If the subapplication is selected for further review by FEMA, the subrecipient must meet the requirements of the Environmental Protection Agency&apos;s &quot;all appropriate inquiries” rule,</inlineHelpText>
        <label>Commercial/industrialor hazard material?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_or_residential_safe_room__c</fullName>
        <label>Community or residential safe room</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connectivity_to_the_structure_Switch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Connectivity to the structure (Switch)</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Constructing_habitable_area_to_replace__c</fullName>
        <inlineHelpText>Activities that result in the construction of new living space at or above the BFE are considered only when they are consistent with mitigation reconstruction requirements described in Addendum Part E.2.1. Activities include structure elevations that abandon a lower enclosed area and add a second story above the BFE to an existing structure.

Reference: 2015 HMA Guidance Addendum, E.4.1</inlineHelpText>
        <label>Constructing habitable area to replace?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Type__c</fullName>
        <inlineHelpText>Include &quot;other&quot; option and fillable field</inlineHelpText>
        <label>Construction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wood Frame</fullName>
                </value>
                <value>
                    <fullName>Masonry</fullName>
                </value>
                <value>
                    <fullName>Manufactored</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_material_lateral_resisting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Construction material, lateral resisting</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contruction_Type_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contruction Type Other</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contruction_Type__c</fullName>
        <label>Contruction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wood Frame</fullName>
                </value>
                <value>
                    <fullName>Masonry</fullName>
                </value>
                <value>
                    <fullName>Manufactored</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coordination_with_emergency_evac_plans__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coordination with emergency evac plans</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coordination_with_historic_preservation__c</fullName>
        <label>Coordination with historic preservation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crawl_space_square_footage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Crawl space square footage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Construction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Construction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Def_Spac_done_for_prtis_bnfting_frm_HFR__c</fullName>
        <label>Def Spac done for prtis bnfting frm HFR?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Removal_activities_HMA_eligible__c</fullName>
        <label>Demo/Removal activities HMA eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_ADA_compliance_plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe ADA compliance plan</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_current_flood_impacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe current flood impacts</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_elevation_method_and_standard__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Standard structure elevation methods are identified in FEMA P-312, Homeowner’s Guide to
Retrofitting – Third Edition (2014), and FEMA P-347, Above the Flood: Elevating Your Floodprone House (2000). In addition, FEMA has developed guidance for the design of appropriate foundations based on the requirements of the International Codes and other applicable standards. This guidance is provided in FEMA P-550, and is available  use with HMA structure elevation projects. Furthermore, FEMA requires Applicants</inlineHelpText>
        <label>Describe elevation method and standard</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_environmental_remediation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe environmental remediation</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_how_it_is_feasible_affective__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe current state of components involved (ditches, culverts, swales, debris basins), including level of protection they provide (e.g. 10, 50, 100 year flood) and how these components will be modified during the project to reduce risk from the identified hazard.

Reference: 2015 HMA Guidance IV H.1.1 &amp; 2015 HMA Addendum, F.3</inlineHelpText>
        <label>Describe how it is feasible &amp; affective</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_level_of_design__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe level of design</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_level_of_design_to_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference: 2015 HMA Guidance, Part IV  H.4.1 &amp; H.4.2

Proposed conceptual designs must be provided either through an identified industry standard (e.g. 30/60/90%) or provide project plans and/or specifications.</inlineHelpText>
        <label>Describe level of design to date</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_maintenance_required_changes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference: 2015 HMA Guidance, Part IV G.1</inlineHelpText>
        <label>Describe maintenance &amp; required changes</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_map_ground_disturbance_staging__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe/map ground disturbance, staging</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_post_treatment_condition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe post-treatment condition</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_seismic_wind_elevation_supports__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe seismic/wind elevation supports</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_standard_year_edition_prefab__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe standard, year, edition, prefab</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_Additional_Hazards__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe the Additional Hazards</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_hazard__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe the hazard</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_tree_stand_in_area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of tree stand in area</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Designed_for_50_or_more_occupants__c</fullName>
        <label>Designed for 50 or more occupants</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detailed_description_of_project_site__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Detailed description of project site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_to_surface_water_bodies_200_ft__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Distance to surface water bodies, 200 ft</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Docs_for_BFE_or_ABFE_each_structure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Docs for BFE or ABFE each structure</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_property_meet_the_SRL_definition__c</fullName>
        <label>Does property meet the SRL definition?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_project_protect_infrastructure__c</fullName>
        <inlineHelpText>Reference: 2015 HMA Guidance, Part IV H.4.1</inlineHelpText>
        <label>Does the project protect infrastructure?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Equipmnt_elevtd_to_resist_wind_quake__c</fullName>
        <label>Equipmnt elevtd to resist wind &amp; quake?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimate_damages_caused_by_power_outages__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimate damages caused by power outages</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exact_herbicides_biologicals_used_how__c</fullName>
        <description>If yes, provide a narrative on exactly what herbicides and/or biological controls will be used and how.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exact herbicides/biologicals used &amp; how</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exisiting_drainage_conditions_and_map__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exisiting drainage conditions and map</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_deck_porch_requires_elevations__c</fullName>
        <inlineHelpText>Elevation of existing decks, porches, or stairs are eligible.

Reference: 2015 HMA Guidance Addendum, E.4.2</inlineHelpText>
        <label>Existing deck/porch requires elevations?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_date_for_each_NFIP_policy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration date for each NFIP policy</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Explain_benifits_provided__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For example, increasing culvert size will result in protecting the roadway from erosion.</inlineHelpText>
        <label>Explain benifits provided</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEMA_P_361_wind_speed_design_statement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FEMA P-361 wind speed design statement</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FIRM_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FIRM Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Limit_Construction_Costs_150k__c</fullName>
        <label>Fed Limit Construction Costs_150k</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Floor_EleFirst_Floor_Elevativation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Floor EleFirst Floor Elevativation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flood_Insurance_Provider_if_not_NFIP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Provider (if not NFIP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flood_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flood_Zone__c</fullName>
        <label>Flood Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flooding_source_on_FIRM_DFIRM_etc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flooding source on FIRM, DFIRM, etc.</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Floodproofing_above_1_foot_over_BFE__c</fullName>
        <label>Floodproofing above 1 foot over BFE?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floodproofing_extend_1_ft_above_BFE__c</fullName>
        <label>Floodproofing extend 1 ft above BFE?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floodproofing_extend_1ft_BFE_how_high__c</fullName>
        <description>Does floodproofing extend 1 foot above BFE, and how high above grade?</description>
        <label>Floodproofing extend 1ft BFE &amp; how high?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foundation_Type_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Foundation Type Other</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foundation_Type__c</fullName>
        <inlineHelpText>Include &quot;other&quot; option and fillable field</inlineHelpText>
        <label>Foundation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Slab on grade</fullName>
                </value>
                <value>
                    <fullName>Crawl space</fullName>
                </value>
                <value>
                    <fullName>Basement</fullName>
                </value>
                <value>
                    <fullName>Open foundation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fuel_tank_above_or_below_ground__c</fullName>
        <label>Fuel tank above or below ground?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Above Ground</fullName>
                </value>
                <value>
                    <fullName>Below Ground</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fuel_type_tank_size_and_piping__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fuel type, tank size, and piping.</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generator_specifications__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Generator specifications</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ground_disturbance_due_to_installation__c</fullName>
        <label>Ground disturbance due to installation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ground_disturbance_sq_ft_and_depth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ground disturbance sq ft and depth</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guidance_for_Hand_Washing_Toilets__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidance for Hand Washing/Toilets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_much_Pop_at_risk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How much Pop at risk?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_gen_and_fuel_tank_be_mounted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How will gen and fuel tank be mounted</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_generator_be_elevated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How will generator be elevated</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Identify_project_site_flood_zone__c</fullName>
        <label>Identify project site flood zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V Zone</fullName>
                </value>
                <value>
                    <fullName>Coastal A Zone</fullName>
                </value>
                <value>
                    <fullName>Flood way</fullName>
                </value>
                <value>
                    <fullName>Storm Surge Inundation Area</fullName>
                </value>
                <value>
                    <fullName>100 year</fullName>
                </value>
                <value>
                    <fullName>500 Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_the_entire_population_at_risk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identify the entire population at risk.</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_IRC_is_defensible_space_addressed__c</fullName>
        <label>If IRC, is defensible space addressed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Private_Property_rights_of_entry__c</fullName>
        <label>If Private Property, rights-of-entry?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_State_Coast_Zone_CZMA_docs_attached__c</fullName>
        <label>If State Coast Zone, CZMA docs attached?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_basement_how_to_be_filled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference:2015 HMA Guidance Addendum,  E.4.2 &amp;  2014 Homeowner&apos;s Guide to Retrofitting (FEMA P-312), 3.1.2</inlineHelpText>
        <label>If basement, how to be filled?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_community_single_or_multi_use__c</fullName>
        <label>If community, single or multi-use?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single-use</fullName>
                </value>
                <value>
                    <fullName>Multi-use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_multi_use_explain__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If multi-use, explain.</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_explain__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, explain.</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>